--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -4,7 +4,7 @@
   background-color: var(--card);
   border-radius: 8px;
   position: relative;
-  height: 46vh;
+  height: 356px;
   transition: all 0.5s ease-in-out;
   overflow: hidden;
 }
@@ -14,39 +14,19 @@
   width: 100%;
 }
 
-.card h3 {
-  color: var(--white);
+.card h1 {
+  margin: 0;
 }
 
 .card:hover {
   /* overflow: visible; */
   border-radius: 8px;
-  height: 68vh;
+  height: 529px;
 }
-
-/* .card button {
-  position: relative;
-  background-color: var(--white);
-  border-radius: 4px;
-  border-style: none;
-  box-sizing: border-box;
-  font-size: 16px;
-  font-weight: bold;
-  color: var(--card);
-  cursor: pointer;
-  line-height: 20px;
-  outline: none;
-  padding: 0.5rem 1rem;
-  margin-bottom: 2rem;
-  text-align: center;
-  text-decoration: none;
-  transition: color 100ms;
-  touch-action: manipulation;
-} */
 
 .text-container {
   text-align: left;
-  padding: 0 2rem;
+  padding: 0rem 2rem;
   transition: all 0.5s ease-in-out;
   background-color: var(--card);
   border-radius: 0 0 8px 8px;
